--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,1 +1,73 @@
-/Users/austinjones/.tmux.conf
+#tmux config file
+set -g default-terminal "screen-256color"
+
+#remap cb
+unbind C-b
+set-option -g prefix `
+bind-key ` send-prefix
+
+# No delay for escape key press
+set -sg escape-time 0
+
+# Reload tmux config
+bind r source-file ~/.tmux.conf
+bind R resize-window -A
+bind S setw synchronize-panes
+
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
+
+# split panes using | and -
+bind l split-window -h
+bind h split-window -v
+bind L split-window -h -c '#{pane_current_path}'
+bind H split-window -v -c '#{pane_current_path}'
+unbind '"'
+unbind %
+
+#vim copy stuff
+# # list the availble keys
+# list-keys -T copy-mode-vi
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+
+#use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+bind -n M-y resize-pane -L 10
+bind -n M-u resize-pane -D 10
+bind -n M-i resize-pane -U 10
+bind -n M-o resize-pane -R 10
+
+# pane movement
+bind-key b break-pane
+bind-key j command-prompt -p "send pane to:"  "join-pane -t '%%'"
+
+# layout options
+set-option main-pane-width 120
+set-option main-pane-height 30
+
+# layout hot keys
+bind -n M-6 select-layout even-horizontal
+bind -n M-7 select-layout even-vertical
+bind -n M-8 select-layout main-horizontal
+bind -n M-9 select-layout main-vertical
+bind -n M-0 select-layout tiled
+
+#vars - test
+sync_ind_colour="#{?pane_synchronized,yellow,white}"
+
+# THEME
+set -g status-bg colour235
+set -g status-fg white
+set -g status-interval 1
+set -g status-left-length 20
+set -g status-right-length 80
+set -g status-left '#[fg=red](#S)#[fg=green] ∆ '
+set -g status-right '#[fg=black]#[default] #[fg=red][%m-%d-%y#[default] | #[fg=cyan]%H:%M]#[default] -- #[fg=green]#(whoami)#[default]@#[fg=green]#H #[fg=black,bg=green]#(~/.config/zsh/bin/tmux-spotify-info)#[default] '
+setw -g window-status-format "#[fg=${sync_ind_colour}][#I: #W]"
+setw -g window-status-current-format "#[fg=black,bg=${sync_ind_colour}][#I#F: #W(#D)]"
