made tmux options global and got the ghost script

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -69,6 +69,6 @@ setw -g window-status-format "#[fg=${sync_ind_colour}][#I: #W]"
 setw -g window-status-current-format "#[fg=black,bg=${sync_ind_colour}][#I#F: #W(#D)]"
 
 # layout options
-set-option main-pane-width 120
-set-option main-pane-height 30
+set-option -g main-pane-width 120
+set-option -g main-pane-height 30
 
